2003-04-08  Andreas Kupries  <andreask@activestate.com>

	* list.man:
	* list.test:
	* list.tcl: Added and documented commands [iota], [equal], and
	  [repeat]. Extended the testsuite.

2003-04-02  Andreas Kupries  <andreask@activestate.com>

	* list.cl:
	* list.test: Fixed SF tcllib bug #714209.

	* ../../../examples/struct: Added example applications for usage
	  of longestCommonSubsequence and lcsInvert.

	* struct.tcl: Integrated new list commands.

	* list.tcl:  Added commands 'reverse', 'assign', 'flatten',
	* list.man:  'map', and 'fold' to the suite of list functions.
	* list.test: 

2003-04-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* list.man:  New files, extended list manipulation
	* list.tcl:  facilities. Started out with Kevin Kenny's
	* list.test: implementation of the algorithm to find the longest
	             common subsequence of two sequences, aka lists.
		     Added myself a method to invert a LCS into a
		     description of differences instead.

2003-04-01  Andreas Kupries  <andreask@activestate.com>

	* record.test: Applied changes provided by Brett Schwarz
	  <schwarzkopf@users.sourceforge.net>. His comments: I had changed
	  the return when encountering a circular record; previously I
	  returned "", but now I return an error. This fixes record.test
	  to reflect the change. Part of fix for Tcllib SF Bug #709375.

	  Additional changes by myself: Reformatted (proper tcl
	  indentations). Renumbered so that all tests have unique id
	  numbers (Before all tests had id 0.1).

2003-02-25  David N. Welton  <davidw@dedasys.com>

	* matrix.tcl: Require Tcl 8.2 because of string map.  Use string
	map instead of regexp.

2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph.man: More semantic markup, less visual one.
	* matrix.man:
	* pool.man:
	* record.man:
	* tree.man:

2002-11-06  Brett Schwarz  <schwarzkopf@users.sourceforge.net>

        * record.tcl: cleaned up code based on output from frink
