@@ -1,5 +1,5 @@
 [comment {-*- tcl -*- doctools manpage}]
-[comment {$Id: list.man,v 1.3 2003/04/08 23:08:42 andreas_kupries Exp $}]
+[comment {$Id: list.man,v 1.4 2003/04/09 18:25:29 andreas_kupries Exp $}]
 [manpage_begin list n 1.2.2]
 [copyright {2003 by Kevin B. Kenny. All rights reserved}]
 [moddesc {Tcl Data Structures}]
@@ -167,6 +167,44 @@ Also an index equal to the length of the first sequence in an
 Similar to [method lcsInvert]. Instead of directly taking the result
 of a call to [method longestCommonSubsequence] this subcommand expects
 the indices for the two sequences in two separate lists.
+
+
+[call [cmd ::struct::list] [method lcsInvertMerge] [arg lcsData] [arg len1] [arg len2]]
+
+Similar to [method lcsInvert]. It returns essentially the same
+structure as that command, except that it may contain chunks of type
+[const unchanged] too.
+
+[nl]
+
+These new chunks describe the parts which are unchanged between the
+two sequences. This means that the result of this command describes
+both the changed and unchanged parts of the two sequences in one
+structure.
+
+[nl]
+[example {
+    sequence 1 = {a b r a c a d a b r a}
+    lcs 1      =   {1 2   4 5     8 9 10}
+    lcs 2      =   {0 1   3 4     5 6 7}
+    sequence 2 =   {b r i c a     b r a c}
+
+    Inversion/Merge  = {{deleted   {0  0} {-1 0}}
+                        {unchanged {1  2}  {0 1}}
+                        {changed   {3  3}  {2 2}}
+                        {unchanged {4  5}  {3 4}}
+                        {deleted   {6  7}  {4 5}}
+                        {unchanged {8 10}  {5 7}}
+                        {added    {10 11}  {8 8}}}
+}]
+
+
+[call [cmd ::struct::list] [method lcsInvertMerge2] [arg lcs1] [arg lcs2] [arg len1] [arg len2]]
+
+Similar to [method lcsInvertMerge]. Instead of directly taking the
+result of a call to [method longestCommonSubsequence] this subcommand
+expects the indices for the two sequences in two separate lists.
+
 
 
 [call [cmd ::struct::list] [method reverse] [arg sequence]]
