@@ -6,7 +6,7 @@
 #
 # Copyright (c) 2003 by Kevin B. Kenny. All rights reserved.
 #
-# RCS: @(#) $Id: list.test,v 1.4 2003/04/08 23:08:42 andreas_kupries Exp $
+# RCS: @(#) $Id: list.test,v 1.5 2003/04/09 18:25:32 andreas_kupries Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -269,7 +269,8 @@ test list-lcs2-3.4 {longestCommonSubsequence2, stupid length limit} {
 
 #----------------------------------------------------------------------
 
-interp alias {} lcsi {} ::struct::list::list lcsInvert
+interp alias {} lcsi  {} ::struct::list::list lcsInvert
+interp alias {} lcsim {} ::struct::list::list lcsInvertMerge
 
 test list-lcsInv-4.0 {longestCommonSubsequence, mixed changes} {
 
@@ -285,6 +286,24 @@ test list-lcsInv-4.0 {longestCommonSubsequence, mixed changes} {
 
     list [catch {lcsi [lcs {a b r a c a d a b r a} {b r i c a b r a c}] 11 9} msg] $msg
 } {0 {{deleted {0 0} {-1 0}} {changed {3 3} {2 2}} {deleted {6 7} {4 5}} {added {10 11} {8 8}}}}
+
+test list-lcsInv-4.1 {longestCommonSubsequence, mixed changes} {
+
+    # sequence 1 = a b r a c a d a b r a
+    # lcs 1      =   1 2   4 5     8 9 10
+    # lcs 2      =   0 1   3 4     5 6 7
+    # sequence 2 =   b r i c a     b r a c
+    #
+    # Inversion/Merge  = deleted   {0  0} {-1 0}
+    #                    unchanged {1  2}  {0 1}
+    #                    changed   {3  3}  {2 2}
+    #                    unchanged {4  5}  {3 4}
+    #                    deleted   {6  7}  {4 5}
+    #                    unchanged {8 10}  {5 7}
+    #                    added    {10 11}  {8 8}
+
+    list [catch {lcsim [lcs {a b r a c a d a b r a} {b r i c a b r a c}] 11 9} msg] $msg
+} {0 {{deleted {0 0} {-1 0}} {unchanged {1 2} {0 1}} {changed {3 3} {2 2}} {unchanged {4 5} {3 4}} {deleted {6 7} {4 5}} {unchanged {8 10} {5 7}} {added {10 11} {8 8}}}}
 
 #----------------------------------------------------------------------
 
